# backup2cloud

./: CMakeLists.txt  README.md  conanfile.py
src/: backup2cloud.cpp
src/backend/: file_hash.hpp  traverser.hpp
src/config/: configuration.hpp
src/pgp/: encrypt.hpp
src/session/: backup_session.hpp  do_backup.hpp
